--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,36 +1,38 @@
-name: Tests
+name: Flask Methods
 
-#############################
-# Start the job on all push #
-#############################
-on: [push, pull_request]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 
 jobs:
-  tests:
-    name: Python ${{ matrix.python-version }} Flask ${{ matrix.flask-version }}
-    runs-on: ubuntu-20.04
-    environment: test
+  build:
 
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
-        flask-version: ["2.3.2", "3.0.0"]
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install pipenv
-          python --version; pip --version; pipenv --version
-          pipenv run pip install flask==${{ matrix.flask-version }}
-      - name: Run tests
-        run: |
-          make check
-          make test
-        env:
-          RANDOM_SEED: 0
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements-dev.txt; fi
+
+    - name: Render Deploy Action
+      uses: johnbeynon/render-deploy-action@v0.0.8
+      with:
+        service-id: srv-csfocao8fa8c73a1h0r0
+        api-key: rnd_Rer6AOspX9SDrSXg1GoovfX7Gmt4
+          
+    - name: Deploy no EC2 AWS
+      run: |
+            echo "Conectando no EC2"
+            echo "${{secrets.AWS_KEY}}" > private_key && chmod 600 private_key
+            ssh -o StrictHostKeyChecking=no -i private_key ec2-52-2-108-25.compute-1.amazonaws.com"
+                  cd python_flask/;git pull;./executar.sh"
+            
